Edit release action glob

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          fail_on_unmatched_files: true
-          files: release/*.*
+          files: ./release/ck-*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
